force-app/main/default/objects/financialsummary__x/financialsummary__x.object-meta.xml
<CustomObject>
    <description>financialsummary</description>
    <externalDataSource>Cosmos_DB</externalDataSource>
    <externalName>financialsummary</externalName>
    <label>financialsummary</label>
    <pluralLabel>financialsummary</pluralLabel>
</CustomObject>