force-app/main/default/objects/financialsummary__x/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <description>Actual</description>
    <externalDeveloperName>ActualWin_ExclFreePlay</externalDeveloperName>
    <label>Actual</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>