force-app/main/default/objects/financialsummary__x/fields/ActualTrend__c.field-meta.xml
<CustomField>
    <fullName>ActualTrend__c</fullName>
    <description>ActualTrend</description>
    <externalDeveloperName>ActualTrend_ExclFreePlay</externalDeveloperName>
    <label>Actual Trend</label>
    <length>128</length>
    <type>Text</type>
</CustomField>