force-app/main/default/objects/financialsummary__x/fields/ADT__c.field-meta.xml
<CustomField>
    <fullName>ADT__c</fullName>
    <description>ADT</description>
    <externalDeveloperName>ADT</externalDeveloperName>
    <label>ADT</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>