force-app/main/default/objects/financialsummary__x/fields/ADTTrend__c.field-meta.xml
<CustomField>
    <fullName>ADTTrend__c</fullName>
    <description>ADTTrend</description>
    <externalDeveloperName>ADTTrend</externalDeveloperName>
    <label>ADTTrend</label>
    <length>128</length>
    <type>Text</type>
</CustomField>