force-app/main/default/objects/financialsummary__x/fields/HeaderLabel__c.field-meta.xml
<CustomField>
    <fullName>HeaderLabel__c</fullName>
    <description>HeaderLabel</description>
    <externalDeveloperName>HeaderLabel</externalDeveloperName>
    <label>HeaderLabel</label>
    <length>128</length>
    <type>Text</type>
</CustomField>