force-app/main/default/objects/financialsummary__x/fields/PartitionKey__c.field-meta.xml
<CustomField>
    <fullName>PartitionKey__c</fullName>
    <description>PartitionKey</description>
    <externalDeveloperName>PartitionKey</externalDeveloperName>
    <label>PartitionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>