force-app/main/default/objects/financialsummary__x/fields/RowKey__c.field-meta.xml
<CustomField>
    <fullName>RowKey__c</fullName>
    <description>RowKey</description>
    <externalDeveloperName>RowKey</externalDeveloperName>
    <label>RowKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>