force-app/main/default/objects/financialsummary__x/fields/SalesforceContactId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactId__c</fullName>
    <description>SalesforceContactId</description>
    <externalDeveloperName>SalesforceContactId</externalDeveloperName>
    <label>SalesforceContactId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>