force-app/main/default/objects/financialsummary__x/fields/Theo__c.field-meta.xml
<CustomField>
    <fullName>Theo__c</fullName>
    <description>Theo</description>
    <externalDeveloperName>Theo</externalDeveloperName>
    <label>Theo</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>