force-app/main/default/objects/financialsummary__x/fields/TheoTrend__c.field-meta.xml
<CustomField>
    <fullName>TheoTrend__c</fullName>
    <description>TheoTrend</description>
    <externalDeveloperName>TheoTrend</externalDeveloperName>
    <label>TheoTrend</label>
    <length>128</length>
    <type>Text</type>
</CustomField>