force-app/main/default/objects/financialsummary__x/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp</description>
    <externalDeveloperName>Timestamp</externalDeveloperName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>