force-app/main/default/objects/financialsummary__x/fields/TotalActual__c.field-meta.xml
<CustomField>
    <fullName>TotalActual__c</fullName>
    <description>TotalActual</description>
    <externalDeveloperName>TotalActual_ExclFreePlay</externalDeveloperName>
    <label>Total Net Actual</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>