force-app/main/default/objects/financialsummary__x/fields/TotalTheo__c.field-meta.xml
<CustomField>
    <fullName>TotalTheo__c</fullName>
    <description>TotalTheo</description>
    <externalDeveloperName>TotalTheo</externalDeveloperName>
    <label>Total Net Theo</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>