force-app/main/default/objects/financialsummary__x/fields/TotalTrips__c.field-meta.xml
<CustomField>
    <fullName>TotalTrips__c</fullName>
    <description>TotalTrips</description>
    <externalDeveloperName>TotalTrips</externalDeveloperName>
    <label>Total Trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>