force-app/main/default/objects/financialsummary__x/fields/TripsTrend__c.field-meta.xml
<CustomField>
    <fullName>TripsTrend__c</fullName>
    <description>TripsTrend</description>
    <externalDeveloperName>TripsTrend</externalDeveloperName>
    <label>TripsTrend</label>
    <length>128</length>
    <type>Text</type>
</CustomField>