force-app/main/default/objects/financialsummary__x/fields/TS__c.field-meta.xml
<CustomField>
    <fullName>TS__c</fullName>
    <description>TS</description>
    <externalDeveloperName>TS</externalDeveloperName>
    <label>TS</label>
    <type>DateTime</type>
</CustomField>